--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.gameCard {
+  display: flex;
+  position: relative;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  height: 300px;
+  width: 200px;
+  border: 1px solid black;
+  padding: 20px;
+  margin: 80px 0;
+  background-color: gainsboro;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gameCard h3 {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 10px;
+}
+
+button {
+  background-color: transparent;
+  border: none;
 }
