--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -15,18 +15,88 @@
   width: 200px;
   border: 1px solid black;
   padding: 20px;
-  margin: 80px 0;
+  margin: 80px 40px 40px 0;
   background-color: gainsboro;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+
 }
 
-.gameCard h3 {
+.gameCard button {
   position: absolute;
   bottom: 0;
-  padding-bottom: 10px;
+  margin-bottom: 30px;
 }
 
-button {
-  background-color: transparent;
-  border: none;
+.finder {
+  width: 300px;
+  height: 325px
+}
+
+ul {
+  padding-inline-start: 0;  
+}
+
+li {
+  list-style: none;
+  color: blue;
+  display: flex;
+  border: 1px solid green;
+  height: 50px;
+  /* justify-content: center; */
+  align-items: center;
+  padding-left: 5px ;
+}
+
+li:hover {
+  color: red;
+  cursor: pointer;
+}
+
+.gooey{
+  /* position: absolute;  */
+  /* top: 40%;  */
+  /* right: 30%;  */
+  width: 150px; 
+  height: 35px; 
+  /* margin: -20px 0 0 -71px;  */
+  background: white; 
+  filter: contrast(10);
+  padding-bottom: 2px;
+}
+
+.dot {
+  position: absolute;
+  width: 15px;
+  height: 16px;
+  top: 8px;
+  /* left: 15px; */
+  /* filter: blur(4px); */
+  background: #000;
+  border-radius: 50%;
+  transform: translateX(0);
+  animation: dot 2.8s infinite;
+}
+
+.dots {
+  transform: translateX(0);
+  margin-top: 8px;
+  margin-left: 15px;
+  animation: dots 2.8s infinite;
+}
+span {
+  display: block;
+  float: left;
+  width: 16px;
+  height: 16px;
+  margin-left: 16px;
+  filter: blur(4px);
+  background: #000;
+  border-radius: 50%;
+}
+
+@keyframes dot {
+  50% {transform: translateX(80px)}
+}
+@keyframes dots {
+  50% {transform: translateX(-31px)}
 }
