--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   margin: 80px 40px 40px 0;
   background-color: gainsboro;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  border-radius: 5%;
 
 }
 
@@ -29,7 +30,7 @@
 
 .finder {
   width: 300px;
-  height: 325px
+  height: 340px
 }
 
 ul {
