--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 40px
 }
 
 .gameCard {
@@ -15,7 +16,7 @@
   width: 200px;
   border: 1px solid black;
   padding: 20px;
-  margin: 80px 40px 40px 0;
+  margin: 60px 40px;
   background-color: gainsboro;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
   border-radius: 5%;
@@ -38,7 +39,12 @@
 
 .finder {
   width: 300px;
-  height: 340px
+  height: 300px
+}
+
+input {
+  padding-left: 5px;
+  width: 290px
 }
 
 ul {
@@ -51,9 +57,9 @@ li {
   display: flex;
   border: 1px solid green;
   height: 50px;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
-  padding-left: 5px ;
+  padding-left: 10px ;
 }
 
 li:hover {
@@ -78,7 +84,7 @@ li:hover {
   width: 15px;
   height: 16px;
   top: 8px;
-  /* left: 15px; */
+  left: 10px;
   /* filter: blur(4px); */
   background: #000;
   border-radius: 50%;
@@ -108,4 +114,10 @@ span {
 }
 @keyframes dots {
   50% {transform: translateX(-31px)}
+}
+
+@media (max-width: 844px) {
+  .App {
+    flex-direction: column;
+  }
 }
