--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   width: 200px;
   border: 1px solid black;
   padding: 20px;
-  margin: 80px 40px 40px 0;
+  margin: 80px 40px 80px 40px;
   background-color: gainsboro;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
   border-radius: 5%;
@@ -30,7 +30,7 @@
 
 .finder {
   width: 300px;
-  height: 340px
+  height: 300px
 }
 
 ul {
@@ -105,5 +105,6 @@ span {
 @media (max-width: 844px) {
   .App {
     flex-direction: column;
+    align-items: center;
   }
 }
