--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ li {
   list-style: none;
   color: blue;
   display: flex;
-  border: 1px solid green;
+  border: 1px solid black;
   height: 50px;
   /* justify-content: center; */
   align-items: center;
@@ -51,6 +51,24 @@ li {
 li:hover {
   color: red;
   cursor: pointer;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
 
 .gooey{
